--- a/storefront/package.json
+++ b/storefront/package.json
@@ -19,7 +19,8 @@
     "daisyui": "^2.51.6",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
