--- a/storefront/package.json
+++ b/storefront/package.json
@@ -16,11 +16,13 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "daisyui": "^2.51.6",
     "postcss": "^8.4.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1"
+    "react-router-dom": "^6.11.1",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
