--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection":"Data source=store.db"
+  },
+  "JWTSettings": {
+    "TokenKey":"some very long key that is super secret"
   }
 }
