--- a/storefront/package.json
+++ b/storefront/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^4.5.8",
+    "@hookform/resolvers": "^3.1.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
@@ -26,7 +27,8 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "react-toastify": "^9.1.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
