--- a/storefront/package.json
+++ b/storefront/package.json
@@ -17,6 +17,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.53.0",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "daisyui": "^2.51.6",
