--- a/api/appsettings.Development.json
+++ b/api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection":"Data source=store.db"
+    "DefaultConnection":"Server=localhost;Port=5432;User Id=appuser;Password=secret;Database=store"
   },
   "JWTSettings": {
     "TokenKey":"some very long key that is super secret"
